// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debug fix order of operations 1`] = `
"create table departments (
  id bigint primary key generated always as identity,
  name text
);

create table employees (
  id bigint primary key generated always as identity,
  name text,
  email text,
  department_id bigint references departments (id)
);"
`;

exports[`debug fix typos 1`] = `
"select
  *
from
  employees;"
`;

exports[`edit add length constraint 1`] = `
"create table employees (
  id bigint primary key generated always as identity,
  name text check (length(name) >= 4),
  email text
);"
`;

exports[`generate single table with specified columns 1`] = `
"create table employees (
  id bigint primary key generated always as identity,
  name text not null,
  email text unique not null,
  position text not null
);"
`;

exports[`rls chat select policy using table definition 1`] = `
{
  "checkExpression": undefined,
  "command": "select",
  "table": "todos",
  "usingExpression": "user_id = auth.uid ()",
}
`;

exports[`sql chat single table with specified columns 1`] = `
"create table employees (
  id bigint primary key generated always as identity,
  name text not null,
  email text unique not null,
  position text not null,
  created_at timestamp with time zone default current_timestamp,
  updated_at timestamp with time zone default current_timestamp
);"
`;

exports[`sql chat table referencing users creates fk to auth.users 1`] = `
"create table todos (
  id bigint primary key generated always as identity,
  title text not null,
  description text,
  created_at timestamp with time zone default current_timestamp,
  author_id uuid references auth.users (id),
  completed boolean default false
);"
`;
